--- a/docs/predefined-evaluations/context-awareness/context-relevance.mdx
+++ b/docs/predefined-evaluations/context-awareness/context-relevance.mdx
@@ -1,9 +1,10 @@
 ---
 title: Context Relevance
-description: Grades how relevant the context was to the question specified.
+description: Grades how relevant the context was to the question specified. ([Tutorial](https://github.com/uptrain-ai/uptrain/blob/main/examples/checks/context_awareness/relevance.ipynb))
 ---
 
-### CONTEXT_RELEVANCE  ([Tutorial](https://github.com/uptrain-ai/uptrain/blob/main/examples/checks/context_awareness/relevance.ipynb))
+
+
 
 Grades how relevant the context was to the question specified.
 
