--- a/docs/predefined-evaluations/context-awareness/context-relevance.mdx
+++ b/docs/predefined-evaluations/context-awareness/context-relevance.mdx
@@ -4,11 +4,48 @@ description: Grades how relevant the context was to the question specified. ([Tu
 ---
 
 
+The context relevance check evaluates if the 
 
+Context relevance score measures if the retrieved context has enough information to answer the question being asked. 
+This check is important as a bad context reduces the chances of the model giving a relevant response to the question asked, as well as leads to hallucinations.
 
-Grades how relevant the context was to the question specified.
+You can read our [blog](https://blog.uptrain.ai/decoding-perplexity-and-its-significance-in-llms/) to learn more about why context relevance is important.
 
 Columns required:
-- `question`
-- `context`
+- `question`: The question asked by the user
+- `context`: Information retrieved to answer the question
+
+
+```python
+from uptrain import EvalLLM, Evals
+
+OPENAI_API_KEY = "sk-********************"  # Insert your OpenAI key here
+
+data = [{
+    'question': 'What is the capital of France?',
+    'context': 'Paris, the City of Lights, is the capital of France and a global center for art, fashion, gastronomy, and culture. Its 19th-century cityscape is crisscrossed by wide boulevards and the Seine River. Beyond such iconic landmarks as the Eiffel Tower and the 12th-century Notre Dame Cathedral, the city is known for its charming cafes, trendy boutiques, and rich history. '
+}]
+
+eval_llm = EvalLLM(openai_api_key=OPENAI_API_KEY)
+
+res = eval_llm.evaluate(
+    data = data,
+    checks = [Evals.CONTEXT_RELEVANCE]
+)
+
+{
+    "score_context_relevance": 1.0,
+    "explanation_context_relevance": "The question is \"What is the capital of France?\" The extracted context mentions that \"Paris, the City of Lights, is the capital of France.\" This directly answers the given question completely. Therefore, the correct choice is (A) The extracted context can answer the given question completely.\n\n1.0\n1.0"
+}
+```
+
+## How it works
+
+We evaluate context relevance by determining which of the following three cases apply for the given task data:
+
+A. The extracted context can answer the given query completely.
+
+B. The extracted context can give some relevant answer for the given query but can't answer it completely.
+
+C. The extracted context doesn't contain any information to answer the given query.
 
