--- a/docs/predefined-evaluations/response-quality/response-consistency.mdx
+++ b/docs/predefined-evaluations/response-quality/response-consistency.mdx
@@ -52,6 +52,13 @@ This contradicts the context which states that pneumonia is typically treated wi
 
 Resulting in a low response consistency score.
 
+### How it works?
+
+We evaluate response consistency through the following steps:
+
+* Generating an argument as to why the given response is appropriate for the question asked. 
+* Rating the generated argument on a score of 0 to 1, as per how logical the argument seems to be.
+
 <CardGroup cols={2}>
   <Card
     title="Tutorial"
