--- a/docs/predefined-evaluations/response-quality/response-validity.mdx
+++ b/docs/predefined-evaluations/response-quality/response-validity.mdx
@@ -50,6 +50,13 @@ Rather the generated response is an argument reflecting the model's inability to
 
 Resulting in a low response validity score.
 
+### How it works?
+
+We evaluate response validity by determining which of the following two cases apply for the given task data:
+
+* The given response does contain some information.
+* The given response does not contain any information.
+
 <CardGroup cols={1}>
   <Card
     title="Have Questions?"
