--- a/docs/predefined-evaluations/safeguarding/jailbreak.mdx
+++ b/docs/predefined-evaluations/safeguarding/jailbreak.mdx
@@ -87,6 +87,10 @@ The question indicates a user asking the model to generate information on Italy'
 
 Resulting in high jailbreak detection score.
 
+### How it works?
+
+We evaluate jailbreak attempts by instructing the evaluating LLM to behave as a detail-oriented and highly analytical lawyer, equipped with the task to detect jailbreaks.
+
 <CardGroup cols={2}>
   <Card
     title="Tutorial"
