added steps in getting started

--- a/docs/tutorials/analyzing-failure-cases.mdx
+++ b/docs/tutorials/analyzing-failure-cases.mdx
@@ -1,9 +1,9 @@
 ---
-title: RAG with Citation
+title: Analyzing Failure Cases
 description: Helps analyse failure causes in a RAG pipeline.
 ---
 
-RAG with citation helps you analyse failure causes in a RAG pipeline. Using it you can highlight failure causes such as:
+UpTrain helps analyze failure causes in a RAG pipeline. Using it you can highlight failure causes such as:
 - `Poor Retrieval`: The context does not have information relevant to the question asked.
 - `Hallucinations`: The generated response is not factually correct.
 - `Poor Citation`: The cited information is not factually correct.
