--- a/docs/getting-started/quickstart.mdx
+++ b/docs/getting-started/quickstart.mdx
@@ -3,26 +3,21 @@ title: "Quickstart"
 description: "Get started with UpTrain in a few simple steps"
 ---
 
-
-### Install UpTrain
-
+<Steps>
+  <Step title="Install UpTrain">
 Run the following commands in your terminal to install UpTrain:
-
 ```bash
 pip install uptrain
 ```
-
-### Import required libraries
-
+  </Step>
+  <Step title="Import required libraries">
 ```python
 from uptrain import EvalLLM, Evals
 import json
 ```
-
-
-### Create your data
-
-You can define your data as a simple dictionary with the following keys:
+  </Step>
+  <Step title="Create your data">
+    You can define your data as a simple dictionary with the following keys:
 
 - `question`: The question you want to ask
 - `context`: The context relevant to the question
@@ -44,26 +39,22 @@ data = [{
     ]
 }]
 ```
-
-## Run evaluations
-
-Create an instance of the `EvalLLM` class and pass your OpenAI API key to the constructor. You can find your OpenAI API key [here](https://beta.openai.com/account/api-keys).
-
+  </Step>
+  <Step title="Run Evaluations">
+  Create an instance of the `EvalLLM` class and pass your OpenAI API key to the constructor.
 ```python
 OPENAI_API_KEY = "sk-********************"  # Insert your OpenAI key here
-
 eval_llm = EvalLLM(openai_api_key=OPENAI_API_KEY)
 ```
-
-
-### Evaluate your data
-
+<Info>You can find your OpenAI API key [here](https://beta.openai.com/account/api-keys).</Info>
+  </Step>
+  <Step title="Evaluate your data">
 Now that we have our data, we can evaluate it using UpTrain. We use the `evaluate` method to do this. This method takes the following arguments:
 
 - `data`: The data you want to evaluate upon
 - `evals`: The evaluations you want to perform on your data
 
-You can find the list of all available evaluations [here](/key-components/evals).
+You can find the list of all available evaluations [here](/predefined-evaluations).
 
 ```python
 results = eval_llm.evaluate(
@@ -71,9 +62,10 @@ results = eval_llm.evaluate(
     checks=[Evals.CONTEXT_RELEVANCE, Evals.FACTUAL_ACCURACY, Evals.RESPONSE_COMPLETENESS]
 )
 ```
-
-### Get your results
-
+  </Step>
+  <Step title="Get your results">
 ```python
 print(json.dumps(results, indent=3))
 ```
+  </Step>
+</Steps>
